Fix copyright icon links wrapping

--- a/src/assets/stylesheets/_site.scss
+++ b/src/assets/stylesheets/_site.scss
@@ -83,5 +83,9 @@
 
   .copyright {
     font-size: 0.8em;
+
+    a {
+      white-space: nowrap;
+    }
   }
 }
